--- a/myDaisyCloud/mysite/daisycloud/templates/test.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/test.html
@@ -42,7 +42,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right" style="padding-right:50px;">
               <li><a href="mailto:dev@daisycloud.org">Contact Us</a></li>
-              <li><a href="https://github.com/OpenDaisy">Download</a></li>
+              <li><a href="https://github.com/openstack/daisycloud-core">Download</a></li>
           </ul>
       </div>
     </div>
