--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -50,7 +50,7 @@
 </nav>
 
 <div id="top_img" class="" sytle="font-weight:700px;">
-  <div style="height:550px;background-size:1440px 546px;background-image:url(./static/img/bg_img2.png)">
+  <div style="height:550px;background-size:1440px 546px;background-image:url(./static/img/ok1.png)">
       <div style="padding-top:200px;padding-left:240px;">
           <h1 style="font-size:56px;"><b>Daisy</b></h1>
           <p font-size="30px">
