--- a/myDaisyCloud/mysite/daisycloud/templates/joinin.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/joinin.html
@@ -1,10 +1,193 @@
 {% extends 'index.html' %}
 {% load i18n %}
 
+{% block api %}
+<div id="api_about" style="width:1000px;">
+    <div id="api_header">
+        <h1 style="color:black;">Daisy REST-FUL API</h1>
+        <!--div>
+            <button>Host</button>
+            <button>cLUSTE</button>
+            <button>Install</button>
+            <button>Uninstall</button>
+            <button>Update</button>
+        </div-->
+    </div>
+    <table class="table table-bordered">
+     <th>Install</th>
+     <tr>
+         <td width="400px">
+             /v1/install/{id}
+         </td>
+         <td align="right">
+             <span class="badge" style="background:green;">POST</span>
+             <span class="badge" style="background:#5bc0de">GET</span>
+         </td>
+     </tr>
+    </table>
+    <table class="table table-bordered">
+     <th>Uninstall</th>
+     <tr>
+         <td width="400px">
+             /v1/uninstall/{id}
+         </td>
+         <td align="right">
+             <span class="badge" style="background:green;">POST</span>
+             <span class="badge" style="background:#5bc0de">GET</span>
+         </td>
+     </tr>
+    </table>
+    <table class="table table-bordered">
+     <th>Update</th>
+     <tr>
+         <td width="400px">
+             /v1/update/{id}
+         </td>
+         <td align="right">
+             <span class="badge" style="background:#5bc0de">GET</span>
+         </td>
+     </tr>
+     <tr>
+         <td width="400px">
+             /v1/update/{id}/versions/{id}
+         </td>
+         <td align="right">
+             <span class="badge" style="background:green;">POST</span>
+         </td>
+     </tr>
+    </table>
+    <table class="table table-bordered">
+     <th>Hosts</th>
+     <tr>
+         <td width="400px">
+             /v1/hosts
+         </td>
+         <td align="right">
+             <span class="badge" style="background:green;">POST</span>
+         </td>
+     </tr>
+     <tr>
+         <td width="400px">
+             /v1/hosts/detail
+         </td>
+         <td align="right">
+             <span class="badge" style="background:#5bc0de">GET</span>
+         </td>
+     </tr>
+     <tr>
+         <td width="400px">
+             /v1/hosts/{id}
+         </td>
+         <td align="right">
+             <span class="badge" style="background:#5bc0de;">GET</span>
+             <span class="badge" style="background:rgb(40, 212, 169) none repeat scroll 0% 0%;">PUT</span>
+             <span class="badge" style="background:#d9534f;">DELETE</span>
+         </td>
+     </tr>
+    </table>
+    <table class="table table-bordered">
+     <th>Clusters</th>
+     <tr>
+         <td width="400px">
+             /v1/clusters
+         </td>
+         <td align="right">
+             <span class="badge" style="background:green;">POST</span>
+         </td>
+     </tr>
+     <tr>
+         <td width="400px">
+             /v1/hosts/detail
+         </td>
+         <td align="right">
+             <span class="badge" style="background:#5bc0de">GET</span>
+         </td>
+     </tr>
+     <tr>
+         <td width="400px">
+             /v1/clusters/{id}
+         </td>
+         <td align="right">
+             <span class="badge" style="background:#5bc0de;">GET</span>
+             <span class="badge" style="background:rgb(40, 212, 169) none repeat scroll 0% 0%;">PUT</span>
+             <span class="badge" style="background:#d9534f;">DELETE</span>
+         </td>
+     </tr>
+    </table>
+    <div>
+        <button class="btn btn-info">Learn more....</button>
+    </div>
+</div>
+
+{% endblock %}
+
+
+{% block document %}
+<div>
+    <h1>Develop Document</h1>
+    <p>
+        现在支持的功能列表
+     <!--img src="./static/img/daisy1.png"-->
+    </p>
+    <p>daisy-core模块</p>
+    <p>daisy-wui模块</p>
+</div>
+{% endblock %}
+
+{% block get_to_try %}
+<div>
+    <h1>Following steps bellow:</h1>
+    <div style="margin-top:10px;">
+        <h2 style="color:green;">Get Daisy ISO</h2>
+        <div style="border:4px solid #e7edef; border-radius:15px; text-align:center;padding: 20px;width:600px;height:100px;margin-bottom:5px;">
+            <div style="font-size:22px;">
+                Daisy-community-1.0
+            </div>
+            <div style="padding-left:135px;float:left;">
+                <span class="badge" style="background:#5bc0de;">get&nbsp;&nbsp; Release</span>
+            </div>
+            <div style="padding-left:80px;float:left;">
+                <span class="badge" style="background:#5bc0de;">config & deploy doc</span>
+            </div>
+        </div>
+    </div>
+    <div>
+        <h2 style="color:green;">Get Openstack ISO</h2>
+        <div  class="downloadbox">
+            <div style="font-size:22px;">
+                Openstack-community-K
+            </div>
+            <p>
+                <span class="badge" style="background:#5bc0de;">get&nbsp;&nbsp; Release</span>
+            </p>
+        </div>
+    </div>
+    <div>
+        <h2 style="color:green;">Get TFG ISO</h2>
+        <div class="downloadbox">
+            <div style="font-size:22px;">
+                Ubuntu-community-1.0
+            </div>
+            <p>
+                <span class="badge" style="background:#5bc0de;">get&nbsp;&nbsp; Release</span>
+            </p>
+        </div>
+    </div>
+    <!--div>
+        <h2 style="color:green;">Config & deployment documents</h2>
+        <div class="downloadbox" style="height:50px;">
+
+                <span class="badge" style="background:#5bc0de;">get Release</span>
+
+        </div>
+
+    </div-->
+</div>
+{% endblock %}
 
 {% block joinin %}
 <div id="developer" >
-  <p style="font-size:37px;color:pink;">
+  <p style="font-size:37px;color:black;">
       Developer's Manual
   </p>
   <div id="develop_steps">
