--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -58,7 +58,7 @@
 
     <div id="section5" class="container-fluid">
         {% block joinin %}
-            {% include 'joinIn.html' %}
+            {% include 'joinin.html' %}
         {% endblock %}
     </div>
 
