--- a/myDaisyCloud/mysite/daisycloud/templates/document.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/document.html
@@ -13,6 +13,7 @@
         <a href="https://wiki.openstack.org/wiki/Daisy">details link</a>
     </p>
     <p>
-        <embed src="http://player.youku.com/player.php/sid/XMTUxOTM1NTAyNA==/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+        <!--embed src="http://player.youku.com/player.php/sid/XMTUxOTM1NTAyNA==/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed-->
+        <embed src="http://player.youku.com/player.php/sid/XMTUzMzMzNTY2MA==/v.swf" allowFullScreen="true" quality="high" width="480" height="400" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
     </p>
 </div>
