--- a/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
@@ -10,7 +10,7 @@
       GUI-driven experience for deployment and management of OpenStack,
       related community projects and plug-ins.
   </p>
-  <p>
+  <!--p>
       Daisy brings consumer-grade simplicity to streamline and accelerate
       the otherwise time-consuming, often complex, and error-prone process
       of deploying, testing and maintaining various configuration flavors
@@ -19,9 +19,9 @@
       focuses on automating the deployment and testing of OpenStack and
       a range of third-party options, so it’s not compromised by hard bundling
       or vendor lock-in.
-  </p>
-  <p>
-     <img src="./static/img/daisy_arcit.JPG">
+  </p-->
+  <p style="margin-top:35px;">
+     <img src="./static/img/daisy_frame.png">
   </p>
       <a type="button" class="btn btn-info" href="https://wiki.openstack.org/wiki/Daisy">Learn more....</a>
 </div>
