--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -56,7 +56,7 @@
       {% endblock %}
     </div>
 
-    <div id="section5" class="container-fluid">
+    <div id="section5" class="container-fluid" style="height:auto!important;height:700px;min-height:700px;">
         {% block joinin %}
             {% include 'joinin.html' %}
         {% endblock %}
