--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -11,13 +11,52 @@
   body {
       position: relative;
   }
-  #top_img  {background-color: black;}
-  #section1 {padding-top:80px;height:800px;padding-left:200px;padding-right:200px;}
-  #section3 {padding-top:80px;height:900px;color:black; padding-left:200px;padding-right:200px;}
-  #section2 {padding-top:80px;height:1280px;background-color: #f5f6f6;padding-left:200px;padding-right:200px;}
-  #section5 {padding-top:80px;height:800px;padding-left:200px;padding-right:200px;}
-  #section4 {padding-top:80px;height:750px;color:black; background-color: #f5f6f6;padding-left:200px;padding-right:200px;}
-  .downloadbox {border: 4px solid #e7edef;border-radius: 15px;text-align: center;padding: 20px;width:600px;height:100px;margin-bottom:5px;}
+  #top_img  {
+      background-color: black;
+      }
+  #section1 {
+      padding-top:80px;
+      height:800px;
+      padding-left:200px;
+      padding-right:200px;
+      }
+  #section2 {
+      padding-top:80px;
+      height:1100px;
+      background-color: #f5f6f6;
+      padding-left:200px;
+      padding-right:200px;
+      }
+  #section3 {
+      padding-top:80px;
+      height:900px;
+      color:black;
+      padding-left:200px;
+      padding-right:200px;
+      }
+  #section4 {
+      padding-top:80px;
+      height:750px;
+      color:black;
+      background-color: #f5f6f6;
+      padding-left:200px;
+      padding-right:200px;
+      }
+  #section5 {
+      padding-top:80px;
+      height:800px;
+      padding-left:200px;
+      padding-right:200px;
+      }
+  .downloadbox {
+      border: 4px solid #e7edef;
+      border-radius: 15px;
+      text-align: center;
+      padding: 20px;
+      width:600px;
+      height:100px;
+      margin-bottom:5px;
+      }
   </style>
 </head>
 
