modify link to daisycloud

--- a/myDaisyCloud/mysite/daisycloud/templates/api.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/api.html
@@ -13,7 +13,11 @@
             <li><a >Install</a></li>
             <li><a >Uninstall</a></li>
             <li><a >Update</a></li>
-            <li><a href="https://wiki.openstack.org/wiki/Daisy">More...</a></li>
+            <li>
+                <a type="button" class="btn btn-success" href="https://wiki.openstack.org/wiki/Daisy">
+                    For More...
+                </a>
+            </li>
             </ul>
         </div>
     </div>
@@ -119,9 +123,6 @@
          </td>
      </tr>
     </table>
-    <!--div>
-        <button class="btn btn-info">Learn more....</button>
-    </div-->
     </div>
 </div>
 
