--- a/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/daisy_desc.html
@@ -13,5 +13,5 @@
   <p style="margin-top:35px;">
      <img src="./static/img/daisy_frame.png">
   </p>
-      <a type="button" class="btn btn-info" href="https://wiki.openstack.org/wiki/Daisy">Learn more....</a>
+      <a type="button" class="btn btn-success" href="#section2">Learn more....</a>
 </div>
