--- a/myDaisyCloud/mysite/daisycloud/templates/document.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/document.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
 
-<div>
+<div id="_section2">
     <h1>Structure & Features</h1>
     <div>
       <div class="col-md-6">
@@ -44,7 +44,7 @@
           </ul>
         </div>
         <p>
-            <a type="button" class="btn btn-success" href="https://wiki.openstack.org/wiki/Daisy">For more detail document</a>
+            <a type="button" class="btn btn-success" href="https://wiki.openstack.org/wiki/Daisy">For more detail...</a>
         </p>
       </div>
       <div class="col-md-8" style="margin-top:60px;">
