--- a/myDaisyCloud/mysite/daisycloud/templates/top.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/top.html
@@ -10,7 +10,7 @@
               Provides automated deployment and management of OpenStack and other distributed systems
             </h3>
           </p>
-          <a type="button" class="btn btn-large btn-info" href="https://launchpad.net/daisy" style="margin-top:20px;">Begin with bugs</a>
+          <a type="button" class="btn btn-large btn-info" href="https://launchpad.net/daisycloud-core" style="margin-top:20px;">Begin with bugs</a>
           <a type="button" class="btn btn-large btn-info" href="https://github.com/openstack/daisycloud-core" style="margin-top:20px;margin-left:15px;">Glone code</a>
       </div>
 </div>
