--- a/myDaisyCloud/mysite/daisycloud/templates/api.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/api.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
 
-<div id="api_about" style="width:1000px;">
+<div id="api_about" style="width:1000px;text-align:center;">
     <h1 style="color:black;">REST-FUL API</h1>
     <div style="font-size:20px;padding-left:10px;">Daisy provide standard RestFul interface</div>
     <div id="api_header" class="col-md-4">
