--- a/myDaisyCloud/mysite/daisycloud/templates/footer.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/footer.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 {% load url from future %}
 
-<div style="height:100px;background:black;">
+<div style="height:100px;background:#172602;">
      <div style="padding-left:400px;padding-top:15px;">
          <h3> Related Links:</h3>
          <a>link to daisy4nfv</a>
