--- a/myDaisyCloud/mysite/daisycloud/templates/header.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/header.html
@@ -1,8 +1,8 @@
 {% load i18n %}
 {% load url from future %}
 
-<nav class="navbar navbar-inverse navbar-fixed-top" style="background:black;height:70px">
-  <div class="container-fluid" style="padding-left:60px;padding-bottom:1px;">
+<nav class="navbar navbar-inverse navbar-fixed-top daisy_nav">
+  <div class="container-fluid" style="padding-left:42px;padding-bottom:1px;">
     <div class="navbar-heade">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
@@ -11,16 +11,16 @@
       </button>
       <a class="navbar-brand" href="#"><img src="./static/img/daisya.png" height="50px"></a>
     </div>
-    <div style="color:write;font-size:19px;padding-top:15px;padding-left:120px;">
+    <div style="color:#e7e7e7;font-size:14px;padding-top:15px;padding-left:120px;">
       <div class="collapse navbar-collapse" id="myNavbar" >
           <ul class="nav navbar-nav">
-            <li><a href="#section1">What is DAISY?</a></li>
+            <li><a href="#section1">What is DAISY</a></li>
             <li><a href="#section2">Document</a></li>
             <li><a href="#section3">API</a></li>
             <li><a href="#section4">Get To Try</a></li>
             <li><a href="#section5">Join Us</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right" style="padding-right:50px;">
+          <ul class="nav navbar-nav navbar-right" style="padding-right:42px;">
               <li><a href="mailto:dev@daisycloud.org">Contact Us</a></li>
               <li><a href="https://github.com/openstack/daisycloud-core/archive/master.zip">Get code</a></li>
           </ul>
