--- a/myDaisyCloud/mysite/daisycloud/templates/index.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/index.html
@@ -11,6 +11,10 @@
   body {
       position: relative;
   }
+  .daisy_nav {
+      background:#172602;
+      height:70px
+  }
   #top_img  {
       background-color: black;
       }
