--- a/myDaisyCloud/mysite/daisycloud/templates/joinin.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/joinin.html
@@ -1,14 +1,11 @@
 {% load i18n %}
 {% load url from future %}
 
-<div id="developer" >
-  <div class="col-md-4" style="margin-top:10px;">
+<div id="developer" style="text-align:center;">
+  <div style="margin-top:10px;">
         <h1 style="color:rgb(107, 194, 63);">How to join in us:</h1>
-        <div style="padding-left:70px;padding-top:10px;">
-            <img src="./static/img/joinin.ico">
-        </div>
-    </div>
-  <div id="develop_steps" class="col-md-8" style="margin-top:40px;">
+  </div>
+  <div id="develop_steps" style="margin-top:40px;">
       <div id="prepare_steps">
           <div id="prepare_steps_title">
               <p style="font-size:30px;color:#3DB9B9;">
