--- a/myDaisyCloud/mysite/daisycloud/templates/top.html
+++ b/myDaisyCloud/mysite/daisycloud/templates/top.html
@@ -2,15 +2,32 @@
 {% load url from future %}
 
 
-<div style="height:550px;background-size:1440px 546px;background-image:url(./static/img/d5.jpg)">
-      <div style="padding-top:200px;padding-left:240px;">
-          <h1 style="font-size:56px;"><b>Daisy</b></h1>
-          <p font-size="30px">
-            <h3>
-              Provides automated deployment and management of OpenStack and other distributed systems
-            </h3>
-          </p>
-          <a type="button" class="btn btn-large btn-info" href="https://launchpad.net/daisycloud-core" style="margin-top:20px;">Begin with bugs</a>
-          <a type="button" class="btn btn-large btn-info" href="https://github.com/openstack/daisycloud-core" style="margin-top:20px;margin-left:15px;">Glone code</a>
+<div style="color:white;margin-top:70px;height:476px;background-image:url(./static/img/daisy_bg.png);background-size:cover;">
+      <div style="padding-top:90px;padding-left:300px;">
+          <h1 style="font-size:56px;color:#fdd002">
+              <b>Daisy</b>
+          </h1>
+          <div style="padding-top:17px;padding-bottom:24px;color:#dfe0de;font-size:14px">
+              <div>
+                  Provides automated deployment and management of
+              </div>
+              <div style="padding-top:20px;">
+                  OpenStack and other distributed systems
+              </div>
+          </div>
+          <div style="width:132px;height:45px;float:left;margin-top:20px;background-image:url(./static/img/btn_transp.png)">
+              <a type="button" class="btn btn-large"
+                     style="padding-top:10px;color:#dfe0de;font-size:12px;"
+                     href="https://launchpad.net/daisycloud-core">
+                  Begin with bugs
+              </a>
+          </div>
+          <div style="margin-left:30px;float:left;width:132px;color:#dfe0de;height:45px;margin-top:20px;background-image:url(./static/img/btn_transp.png)">
+              <a type="button" class="btn btn-large"
+                 style="padding-top:10px;padding-left:25px;color:#dfe0de;font-size:12px;"
+                 href="https://github.com/openstack/daisycloud-core">
+                  Glone code
+              </a>
+          </div>
       </div>
 </div>
